Fixed Overflow Problem

--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ h5 {
     text-align: center;
     box-shadow: 5px 5px 10px grey;
     color: black;
+    overflow: hidden;
 }
 
 .Top_PicHalf {
